--- a/personal-budget/package.json
+++ b/personal-budget/package.json
@@ -15,12 +15,16 @@
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.1.5",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "chart": "^0.1.2",
     "chart.js": "^2.9.3",
     "d3": "^6.2.0",
+    "firebase": "^8.2.0",
+    "ng2-charts": "^2.4.2",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
