--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/SupriyaChinthakuntla/personal-budget#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.4"
   }
 }
